# serializer version: 1
# name: test_binary_sensors[binary_sensor.bedroom_breezer_4s_filter_need_replacement-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'binary_sensor',
    'entity_category': None,
    'entity_id': 'binary_sensor.bedroom_breezer_4s_filter_need_replacement',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Filter Need Replacement',
    'options': dict({
    }),
    'original_device_class': <BinarySensorDeviceClass.PROBLEM: 'problem'>,
    'original_icon': None,
    'original_name': 'Filter Need Replacement',
    'platform': 'tion',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'filter_need_replacement',
    'unique_id': 'B4S0000001_filter_need_replacement',
    'unit_of_measurement': None,
  })
# ---
# name: test_binary_sensors[binary_sensor.bedroom_breezer_4s_filter_need_replacement-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <EntityStateAttribute.DEVICE_CLASS: 'device_class'>: 'problem',
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'Breezer 4S Filter Need Replacement',
    }),
    'context': <ANY>,
    'entity_id': 'binary_sensor.bedroom_breezer_4s_filter_need_replacement',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'off',
  })
# ---
# name: test_binary_sensors[binary_sensor.breezer_o2_filter_need_replacement-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'binary_sensor',
    'entity_category': None,
    'entity_id': 'binary_sensor.breezer_o2_filter_need_replacement',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Filter Need Replacement',
    'options': dict({
    }),
    'original_device_class': <BinarySensorDeviceClass.PROBLEM: 'problem'>,
    'original_icon': None,
    'original_name': 'Filter Need Replacement',
    'platform': 'tion',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'filter_need_replacement',
    'unique_id': 'BO20000001_filter_need_replacement',
    'unit_of_measurement': None,
  })
# ---
# name: test_binary_sensors[binary_sensor.breezer_o2_filter_need_replacement-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <EntityStateAttribute.DEVICE_CLASS: 'device_class'>: 'problem',
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'Breezer O2 Filter Need Replacement',
    }),
    'context': <ANY>,
    'entity_id': 'binary_sensor.breezer_o2_filter_need_replacement',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'on',
  })
# ---
# name: test_binary_sensors[binary_sensor.living_room_breezer_3s_filter_need_replacement-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'binary_sensor',
    'entity_category': None,
    'entity_id': 'binary_sensor.living_room_breezer_3s_filter_need_replacement',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Filter Need Replacement',
    'options': dict({
    }),
    'original_device_class': <BinarySensorDeviceClass.PROBLEM: 'problem'>,
    'original_icon': None,
    'original_name': 'Filter Need Replacement',
    'platform': 'tion',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'filter_need_replacement',
    'unique_id': 'B3S0000001_filter_need_replacement',
    'unit_of_measurement': None,
  })
# ---
# name: test_binary_sensors[binary_sensor.living_room_breezer_3s_filter_need_replacement-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <EntityStateAttribute.DEVICE_CLASS: 'device_class'>: 'problem',
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'Breezer 3S Filter Need Replacement',
    }),
    'context': <ANY>,
    'entity_id': 'binary_sensor.living_room_breezer_3s_filter_need_replacement',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'off',
  })
# ---
